# gifanimator

./: .gitignore  LICENSE  README.md  pyproject.toml
gifanimator/: __init__.py  __main__.py  gif_animator.py  jitter_animation.py
tests/: test_jitter.py
